--- a/m133/gn/skia/BUILD.gn
+++ b/m133/gn/skia/BUILD.gn
@@ -3,8 +3,12 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("../../../build_overrides/skia.gni")
+
+import("../platform.gni")
+
 if (is_fuchsia) {
-  import("//build/fuchsia/sdk.gni")
+  import("${skia_root_dir}/build/fuchsia/sdk.gni")
 }
 if (is_wasm) {
   import("../toolchain/wasm.gni")
@@ -188,21 +192,6 @@ config("default") {
     ldflags += [ "-static-libstdc++" ]
   }
 
-  if (show_includes) {
-    assert(is_clang, "show_includes requires clang to build.")
-    if (is_win) {
-      cflags += [
-        "/clang:-H",
-        "/clang:-fshow-skipped-includes",
-      ]
-    } else {
-      cflags += [
-        "-H",
-        "-fshow-skipped-includes",
-      ]
-    }
-  }
-
   if (is_ios) {
     if (current_cpu == "arm") {
       _arch_flags = [
@@ -331,18 +320,18 @@ config("default") {
 
   # sanitize only applies to the default toolchain (usually the target).
   if (current_toolchain != default_toolchain) {
-    sanitize = ""
+    sanitize_skia = ""
   }
 
-  if (is_win && !is_clang && sanitize == "ASAN") {
+  if (is_win && !is_clang && sanitize_skia == "ASAN") {
     sanitizers = "address"
     cflags += [ "/fsanitize=$sanitizers" ]
-  } else if (sanitize != "" && sanitize != "MSVC") {
+  } else if (sanitize_skia != "" && sanitize_skia != "MSVC") {
     # You can either pass the sanitizers directly, e.g. "address,undefined",
     # or pass one of the couple common aliases used by the bots.
     sanitizers = sanitize
 
-    if (sanitize == "ASAN") {
+    if (sanitize_skia == "ASAN") {
       # ASAN implicitly runs all UBSAN checks also.
       sanitizers = "undefined,address,float-divide-by-zero"
 
@@ -350,11 +339,11 @@ config("default") {
         # TODO(skia:13344): work out UBSAN link errors
         sanitizers = "address"
       }
-    } else if (sanitize == "HWASAN") {
+    } else if (sanitize_skia == "HWASAN") {
       sanitizers = "hwaddress"
-    } else if (sanitize == "TSAN") {
+    } else if (sanitize_skia == "TSAN") {
       sanitizers = "thread"
-    } else if (sanitize == "MSAN") {
+    } else if (sanitize_skia == "MSAN") {
       sanitizers = "memory"
     }
 
@@ -402,7 +391,7 @@ config("default") {
 
 # See skia:9731.
 config("recover_pointer_overflow") {
-  if (sanitize == "ASAN" && !(is_win && !is_clang)) {
+  if (sanitize_skia == "ASAN" && !(is_win && !is_clang)) {
     cflags = [ "-fsanitize-recover=pointer-overflow" ]
   }
 }
@@ -692,7 +681,7 @@ config("debug_symbols") {
 }
 
 config("no_rtti") {
-  if (sanitize != "ASAN") {  # -fsanitize=vptr requires RTTI
+  if (sanitize_skia != "ASAN") {  # -fsanitize=vptr requires RTTI
     if (is_win) {
       cflags_cc = [ "/GR-" ]
     } else {
