--- a/m133/gn/toolchain/BUILD.gn
+++ b/m133/gn/toolchain/BUILD.gn
@@ -2,7 +2,7 @@ if (is_wasm) {
   import("wasm.gni")
 }
 if (is_fuchsia) {
-  import("//build/fuchsia/sdk.gni")
+  import("${skia_root_dir}/build/fuchsia/sdk.gni")
 }
 
 declare_args() {
