--- a/m133/modules/skresources/BUILD.gn
+++ b/m133/modules/skresources/BUILD.gn
@@ -22,4 +22,8 @@ static_library("skresources") {
     "../..:skia",
     "../../experimental/ffmpeg:video_decoder",
   ]
+  if (use_oh_skia) {
+    include_dirs = [ "${skia_root_dir}" ]
+    deps -= [ "../..:skia" ]
+  }
 }
