--- a/m133/modules/skshaper/BUILD.gn
+++ b/m133/modules/skshaper/BUILD.gn
@@ -28,7 +28,12 @@ if (skia_enable_skshaper) {
     check_includes = false
     public_configs = [ ":public_config" ]
     public = skia_shaper_public
-    deps = [ "../..:skia" ]
+    if (!use_oh_skia) {
+      deps = [ "../..:skia" ]
+    } else {
+      include_dirs = [ "${skia_root_dir}" ]
+      deps = []
+    }
     defines = [ "SKSHAPER_IMPLEMENTATION=1" ]
     sources = skia_shaper_primitive_sources
     if (skia_use_fonthost_mac) {
@@ -46,14 +51,25 @@ if (skia_enable_skshaper) {
     }
     if (skia_enable_skunicode) {
       sources += skia_shaper_skunicode_sources
-      deps += [ "../skunicode" ]
+      if (!use_oh_skia) {
+        deps += [ "../skunicode" ]
+      } else {
+        defines += [
+          "SK_UNICODE_AVAILABLE",
+          "SK_UNICODE_ICU_IMPLEMENTATION",
+        ]
+      }
     }
     if (skia_use_harfbuzz && skia_enable_skunicode) {
       sources += skia_shaper_harfbuzz_sources
-      deps += [
-        "../skunicode",
-        "//third_party/harfbuzz",
-      ]
+      if (!use_oh_skia) {
+        deps += [
+          "../skunicode",
+          "${skia_third_party_dir}/harfbuzz",
+        ]
+      } else {
+        deps += [ "${skia_third_party_dir}/harfbuzz" ]
+      }
     }
     configs += [ "../../:skia_private" ]
   }
