Enable more aggressive tail duplication
Increase hot threshold for tail duplication in block placement pass
to enable more tail duplication transformations.

Signed-off-by: Henry Kao <henry.kao1@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1942,6 +1942,7 @@ if (use_oh_skia) {
         ldflags += [
           "-Wl,-mllvm,-vectorization-bonus-factor=4",
           "-Wl,-mllvm,-vectorizer-min-trip-count=4",
+          "-Wl,-mllvm,-tail-dup-profile-hot-percentile-override=999990",
         ]
       }
     }
