Enable more aggressive tail duplication
Increase hot threshold for tail duplication in block placement pass
to enable more tail duplication transformations.

Signed-off-by: Henry Kao <henry.kao1@huawei.com>

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1942,6 +1942,7 @@ if (use_oh_skia) {
               rebase_path("${skia_feature_pgo_path}/libskia_canvaskit.txt",
                           root_build_dir),
           "-Wl,--no-warn-symbol-ordering",
+          "-Wl,-mllvm,-tail-dup-profile-hot-percentile-override=999990",
         ]
       }
     }
