--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -1009,6 +1009,9 @@ optional("gpu_shared") {
       sources += skia_vma_sources
       public_deps += [ "src/gpu/vk/vulkanmemoryallocator" ]
     }
+    if (skia_vk_enable_partialrender) {
+      public_defines += [ "SK_VK_PARTIALRENDER" ]
+    }
   }
 
   if (skia_use_metal) {
