--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -124,6 +124,9 @@ config("skia_public") {
   if (is_skia_dev_build && !is_wasm) {
     defines += [ "GPU_TEST_UTILS=1" ]
   }
+  if (skia_use_vulkan) {
+    defines += [ "SK_VULKAN" ]
+  }
 
   # Some older versions of the Clang toolchain change the visibility of
   # symbols decorated with API_AVAILABLE macro to be visible. Users of such
