--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1731,16 +1731,16 @@ skia_component("skia") {
 if (use_oh_skia) {
   config("skia_config") {
     include_dirs = [
-      "//third_party/skia",
-      "//third_party/skia/include/core",
-      "//third_party/skia/src/core",
+      "${skia_root_dir}",
+      "${skia_root_dir}/include/core",
+      "${skia_root_dir}/src/core",
     ]
 
     defines = skia_common_defines
   }
 
   config("harfbuzz_config") {
-    include_dirs = [ "//third_party/skia/third_party/externals/harfbuzz/src" ]
+    include_dirs = [ "${skia_root_dir}/third_party/externals/harfbuzz/src" ]
 
     defines = [
       "HAVE_ICU",
@@ -4492,8 +4492,8 @@ ohos_static_library("sksl_ext_static") {
     public_configs = [
       "${skia_root_dir}:skia_public",
       ":skia_config",
-      #"${skia_root_dir}:harfbuzz_config",
-      #"${skia_root_dir}:icu_config",
+      "${skia_root_dir}:harfbuzz_config",
+      "${skia_root_dir}:icu_config",
     ]
     configs = skia_library_configs
     if (enhanced_opt) {
@@ -4547,6 +4547,11 @@ ohos_static_library("sksl_ext_static") {
       "${skia_modules_dir}/skunicode",
       "${skia_modules_dir}/skresources",
     ]
+
+    if (is_arkui_x) {
+      deps -= [ ":fontmgr_ohos" ]
+    }
+
     public = skia_core_public
     public += skia_codec_public
     public += skia_utils_public
