--- a/m133/gn/skia.gni
+++ b/m133/gn/skia.gni
@@ -27,15 +27,16 @@ declare_args() {
   skia_enable_optimize_size = false
   skia_enable_pdf = !is_wasm
   skia_enable_precompile = true
+  skia_enable_sksl = true
   skia_enable_skottie = !is_component_build
-  skia_enable_svg = !is_component_build
+  skia_enable_svg = !is_skia_component_build
   skia_enable_tools = is_skia_dev_build
   skia_disable_tracing = is_official_build
   skia_enable_vello_shaders = false
   skia_disable_vma_stl_shared_mutex = false
   skia_enable_winuwp = false
   skia_generate_workarounds = false
-  skia_include_multiframe_procs = false
+  skia_include_multiframe_procs = true
   skia_lex = false
   skia_print_sksl_shaders = false
   skia_print_native_shaders = false
