--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -960,6 +960,7 @@ optional("gpu_shared") {
   public_defines = []
   public_deps = []
   frameworks = []
+  public_external_deps = []
 
   sources = skia_shared_gpu_sources
   sources += skia_sksl_pipeline_sources
@@ -1002,6 +1003,7 @@ optional("gpu_shared") {
     public_defines += [ "SK_VULKAN" ]
     sources += skia_shared_vk_sources
     configs += [ ":use_skia_vulkan_headers" ]
+    public_external_deps += [ "vulkan-headers:vulkan_headers" ]
     if (skia_enable_vulkan_debug_layers) {
       public_defines += [ "SK_ENABLE_VK_LAYERS" ]
     }
