--- a/m133/src/gpu/vk/vulkanmemoryallocator/BUILD.gn
+++ b/m133/src/gpu/vk/vulkanmemoryallocator/BUILD.gn
@@ -16,9 +16,9 @@ source_set("vulkanmemoryallocator") {
   public_configs = [ ":vulkanmemoryallocator_public" ]
 
   include_dirs = [
-    "../../../../include/third_party/vulkan",
     "../../../../",
   ]
+  external_deps = [ "vulkan-headers:vulkan_headers" ]
   defines = [ "SK_USE_INTERNAL_VULKAN_HEADERS" ]
 
   if (skia_disable_vma_stl_shared_mutex) {
