--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1911,19 +1911,23 @@ if (use_oh_skia) {
           "-Wl,-mllvm,-vectorization-bonus-factor=4",
           "-Wl,-mllvm,-vectorizer-min-trip-count=4",
           "-Wl,--aarch64-inline-plt",
-          "-Wl,-plugin-opt=-split-machine-functions",
-          "-Wl,-mllvm",
-          "-Wl,-fixup-unconditional-branch-unsafely",
-          "-Wl,--no-create-thunks-introduced-by-mfs",
-          "-Wl,-mllvm",
-          "-Wl,-mfs-psi-cutoff=999500",
-          "-Wl,-z",
-          "-Wl,keep-text-section-prefix",
           "-Wl,--symbol-ordering-file=" +
               rebase_path("${skia_feature_pgo_path}/libskia_canvaskit.txt",
                           root_build_dir),
           "-Wl,--no-warn-symbol-ordering",
         ]
+        if (skia_feature_enable_mfs) {
+          ldflags += [
+            "-Wl,-plugin-opt=-split-machine-functions",
+            "-Wl,-mllvm",
+            "-Wl,-fixup-unconditional-branch-unsafely",
+            "-Wl,--no-create-thunks-introduced-by-mfs",
+            "-Wl,-mllvm",
+            "-Wl,-mfs-psi-cutoff=999500",
+            "-Wl,-z",
+            "-Wl,keep-text-section-prefix",
+          ]
+        }
       }
     }
   }
