[新需求]: 0327特性分支，src/ports文件codecheck问题整改 https://gitee.com/openharmony/third_party_skia/issues/IC4QKK
Signed-off-by: liuwei <liuwei793@h-partners.com>

--- a/m133/gn/ports.gni
+++ b/m133/gn/ports.gni
@@ -22,6 +22,7 @@ skia_ports_sources = [
 skia_ports_freetype_sources = [
   "$_src/ports/SkFontHost_FreeType.cpp",
   "$_src/ports/SkFontHost_FreeType_common.cpp",
+  "$_src/ports/SkFontScanner_FreeType.cpp",
   "$_src/ports/SkFontHost_FreeType_common.h",
   "$_src/ports/SkFontScanner_FreeType_priv.h",
   "$_src/ports/SkTypeface_FreeType.h",
