--- a/m133/gn/tests.gni
+++ b/m133/gn/tests.gni
@@ -89,7 +89,6 @@ tests_sources = [
   "$_tests/FontHostStreamTest.cpp",
   "$_tests/FontHostTest.cpp",
   "$_tests/FontMgrFlags.cpp",
-  "$_tests/FontMgrTest.cpp",
   "$_tests/FontNamesTest.cpp",
   "$_tests/FontTest.cpp",
   "$_tests/FrontBufferedStreamTest.cpp",
@@ -329,6 +328,10 @@ tests_sources = [
   "$_tests/Writer32Test.cpp",
   "$_tests/YUVCacheTest.cpp",
   "$_tests/YUVTest.cpp",
+]
+
+font_tests_sources = [
+  "$_tests/FontMgrTest.cpp",
 ]
 
 gl_tests_sources = [
