--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4639,6 +4639,7 @@ ohos_static_library("sksl_ext_static") {
       external_deps = [
         "bounds_checking_function:libsec_shared",
         "hilog:libhilog",
+        "hitrace:hitrace_meter",
       ]
     }
 
