--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4607,6 +4607,7 @@ ohos_static_library("sksl_ext_static") {
       external_deps = [
         "bounds_checking_function:libsec_shared",
         "hilog:libhilog",
+        "hitrace:hitrace_meter",
       ]
       defines += [ "SK_ENABLE_SDF_BLUR_SWITCH" ]
       defines += [ "SK_ENABLE_PATH_COMPLEXITY_DFX" ]
