解决新版三方库oboe路径问题
Signed-off-by: Amber <lvang3@huawei.com>
Change-Id: I9ac51fe6bfc247096a95fd189f9681851b058a5b

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4363,6 +4363,7 @@ ohos_static_library("sksl_ext_static") {
   }
   config("skia_config") {
     include_dirs = [
+      "//third_party/skia",
       "${skia_root_dir}",
       "${skia_root_dir}/include/core",
       "${skia_root_dir}/src/core",
