--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -129,6 +129,9 @@ config("skia_public") {
   }
   if (skia_use_vulkan) {
     defines += [ "SK_VULKAN" ]
+    if (skia_vk_enable_partialrender) {
+      defines += [ "SK_VK_PARTIALRENDER" ]
+    }
   }
 
   # Some older versions of the Clang toolchain change the visibility of
